# Claude-Discord-Bot

./: DISCORD_BOTS.md  README.md  action_agent_workflow.yaml  bridge_watcher.py  claude_bridge_bot.py  claude_discord_bot.py  claude_power_bot.py  claude_workflow.yaml  discord_agent_workflow.yaml  discord_bot.py  discord_chat.py  my_workflow.yaml  nemo_bridge_bot.py  nemo_discord_bot.py  nemo_power_bot.py
bridge/: allowed_users.txt  incoming.txt  seen.txt  watcher_seen.txt
my_plugins/anthropic_provider/: __init__.py
my_plugins/custom_tools/: __init__.py  command_tool.py  discord_tool.py  pyproject.toml  submit_tool.py
my_plugins/custom_tools/nat_custom_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
my_plugins/nat_anthropic/: __init__.py  anthropic_llm.py  pyproject.toml
